Repair event bugs