@@ -5,9 +5,9 @@ org.gradle.daemon=false
 
 # mod version info
 mod_id=caupona
-mod_version = 0.4.2-pre2
+mod_version = 0.4.3
 minecraft_version = 1.20.1
-forge_version = 47.0.19
+forge_version = 47.1.1
 
 # build dependency versions
 forgegradle_version = 5.1.+
