@@ -22,15 +22,18 @@
 package com.teammoeg.caupona.blocks.foods;
 
 import com.teammoeg.caupona.CPBlockEntityTypes;
+import com.teammoeg.caupona.CPBlocks;
+import com.teammoeg.caupona.item.DishItem;
 import com.teammoeg.caupona.network.CPBaseBlockEntity;
 import com.teammoeg.caupona.util.IInfinitable;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.state.BlockState;
 
-public class DishBlockEntity extends CPBaseBlockEntity implements IInfinitable {
+public class DishBlockEntity extends CPBaseBlockEntity implements IInfinitable,IFoodContainer {
 	public ItemStack internal = ItemStack.EMPTY;
 	boolean isInfinite = false;
 
@@ -61,6 +64,33 @@ public class DishBlockEntity extends CPBaseBlockEntity implements IInfinitable {
 	@Override
 	public boolean setInfinity() {
 		return isInfinite = !isInfinite;
+	}
+	@Override
+	public ItemStack getInternal(int num) {
+		return internal;
+	}
+
+	@Override
+	public void setInternal(int num, ItemStack is) {
+		if(!isInfinite) {
+			internal=is;
+			if(internal.is(Items.BOWL)) {
+				this.getLevel().setBlockAndUpdate(this.getBlockPos(), CPBlocks.DISH.get().defaultBlockState());
+			}else if(internal.getItem() instanceof DishItem dish){
+				this.getLevel().setBlockAndUpdate(this.getBlockPos(), dish.getBlock().defaultBlockState());
+			}
+			this.syncData();
+		}
+	}
+
+	@Override
+	public int getSlots() {
+		return 1;
+	}
+
+	@Override
+	public boolean accepts(int num, ItemStack is) {
+		return is.getItem() instanceof DishItem||is.is(Items.BOWL);
 	}
 
 }
